<resources>
    <string name="app_name">StoreOwner</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_login_short">sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_fab_content_desc">Add new product</string>
    <string name="category_fab_content_desc">Add new category</string>
    <string name="product_name">Name</string>
    <string name="product_id">Id</string>
    <string name="product_cost">Cost</string>
    <string name="product_price">Price</string>
    <string name="product_unit">Unit</string>
    <string name="add_button_text">Add</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="category_name">Name</string>
    <string name="no_categories_message">No categories yet</string>
    <string name="categories">Categories</string>
    <string name="no_products_message">No products yet</string>
    <string name="unit_hint">Unit</string>
    <string name="header_title">Store Owner</string>
</resources>