<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/add_product_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".presentation.products.AddProductFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                style="@style/roundedCorners"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_placeholder" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="10dp"
                app:icon="@drawable/ic_baseline_add_photo_24" />
        </FrameLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/product_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:hint="@string/product_cost">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:hint="@string/product_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:hint="@string/product_unit">

                <AutoCompleteTextView
                    android:id="@+id/unit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    app:simpleItems="@array/unit_array" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/add_button_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/cancel_button_text" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>